# mchp-mcp-core

./: .gitignore  PROJECTS_MAP.md  README.md  SESSION_REPORT_PHASE_2C_TO_2D.md  claude.md  pyproject.toml  test_llm_extraction.py
docs/: ARCHITECTURE.md  AUTONOMOUS_EXECUTION_PLAN.md  CAMELOT_TUNING.md  EXTRACTION_STATUS.md  EXTRACTOR_HARMONY_ANALYSIS.md  HEADER_CONSENSUS_IMPLEMENTATION.md  PHASE3A_SUMMARY.md  PHASE_2C_2E_PLAN.md  SESSION_SUMMARY.md  TABLE_EXTRACTION_GUIDE.md  TECH_STACK.md
docs/archive/: HEADER_DATA_ACCURACY_FIX.md  SESSION_2025-10-20_SUMMARY.md
examples/: llm_table_extraction_example.py
manual_review/: README.md
manual_review/extracted_tables/: page21_table0_camelot.csv  page21_table0_pdfplumber.csv  page21_table0_pymupdf.csv  page22_table0_camelot.csv  page22_table0_pdfplumber.csv  page30_table0_camelot.csv  page30_table0_pymupdf.csv  page30_table1_camelot.csv  page31_table0_camelot.csv  page31_table0_pymupdf.csv  page32_table0_camelot.csv  page32_table0_pymupdf.csv
manual_review/screenshots/: INDEX.md  README.md
mchp_mcp_core/: __init__.py
mchp_mcp_core/analysis/: __init__.py  abbreviations.py  terminology.py
mchp_mcp_core/embeddings/: __init__.py  (+1 more)
tests/: check_extractors.py  check_page55_harmony.py  debug_consensus_flow.py  debug_page70.py  debug_region_passing.py  find_tables.py  generate_consensus_screenshots.py  generate_table_screenshots.py  smoke_test.py  test_consensus_bbox_quick.py  test_extractor_harmony.py  test_header_consensus_fix.py  test_header_detector.py  test_multipage_debug.py  test_multipage_detection.py  test_multipage_simple.py  test_pinout_tables.py  test_polarfire.py  tune_camelot.py
(+65 files in other folders)
