[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mchp-mcp-core"
version = "0.1.7"
description = "Shared core library for Microchip MCP servers and RAG tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Internal Use Only"}
authors = [
    {name = "Jonathan Orgill", email = "jonathan.orgill@microchip.com"}
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "aiosqlite>=0.19.0",
    "sqlmodel>=0.0.14",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
tables = [
    # Advanced table extraction with camelot
    "camelot-py[cv]>=0.11.0",
    "opencv-python>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mchp_mcp_core*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
